force-app/main/default/objects/Marketing_Referral_Source__c/Marketing_Referral_Source__c.object-meta.xml
<CustomObject>
    <label>Marketing Referral Source</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Referral Sources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>