force-app/main/default/objects/Marketing_Referral_Source__c/fields/Touch_Point__c.field-meta.xml
<CustomField>
    <fullName>Touch_Point__c</fullName>
    <label>Marketing Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Newspaper Ad Offline</fullName>
                <label>Newspaper Ad</label>
            </value>
            <value>
                <fullName>Outdoor Ad Offline</fullName>
                <label>Outdoor Ad</label>
            </value>
            <value>
                <fullName>Radio Ad Offline</fullName>
                <label>Radio Ad</label>
            </value>
            <value>
                <fullName>sgCarMart</fullName>
            </value>
            <value>
                <fullName>Word-of-Mouth / Friends Offline</fullName>
                <label>Word-of-Mouth / Friends</label>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>TV Ads Offline</fullName>
                <label>TV Ads</label>
            </value>
            <value>
                <fullName>Digital Ads</fullName>
            </value>
            <value>
                <fullName>Tik Tok</fullName>
            </value>
            <value>
                <fullName>ChatBot</fullName>
                <isActive>false</isActive>
                <label>ChatBot</label>
            </value>
            <value>
                <fullName>Email Offline</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
            <value>
                <fullName>Existing Customer Offline</fullName>
                <isActive>false</isActive>
                <label>Existing Customer</label>
            </value>
            <value>
                <fullName>Online Ad</fullName>
                <isActive>false</isActive>
                <label>Online Ad</label>
            </value>
            <value>
                <fullName>SMS Offline</fullName>
                <isActive>false</isActive>
                <label>SMS</label>
            </value>
            <value>
                <fullName>Showroom Walk-In Offline</fullName>
                <isActive>false</isActive>
                <label>Showroom Walk-In Offline</label>
            </value>
            <value>
                <fullName>WhatsApp Business</fullName>
                <isActive>false</isActive>
                <label>WhatsApp Business</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>